# Palantir

./: .gitignore  应急安全AI操作系统方案书.md  应急安全AI操作系统方案书V1.md  应急安全AI操作系统方案书V2.md  应急安全AI操作系统方案书V3.md  应急安全AI操作系统方案书V4.md  应急安全AI操作系统方案书V6.md  应急安全AI操作系统方案书V7-ppt.md  应急安全AI操作系统方案书V7.md  应急安全AI操作系统方案书V8-增强包.md  应急安全AI操作系统方案书V8-系统总结PPT.md  应急安全AI操作系统方案书V8.md  背景.md
demo-os/: 1、重新生成一个页面，内容只包含：1) 风险热力图（简化为 TopN 列表）包含.ini  README.md  compose.yaml  docker-compose.yaml  部署文档.md
demo-os/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
demo-os/frontend/src/: App.vue
demo-os/pipe-china/: docker-compose.yaml  提示词.md
demo-os/pipe-china/api/: requirements.txt
demo-os/services/agent/: Dockerfile  pyproject.toml
demo-os/services/agent/app/: main.py
demo-os/services/api/: Dockerfile  pyproject.toml
demo-os/services/api/app/: main.py
demo-os/services/api/app/storage/: db.py  models.py
demo-os/services/model/: Dockerfile  pyproject.toml
demo-os/services/model/app/: main.py
pipe-china/: docker-compose.yaml  ontology思想.md  建议.md  提示词.md  管网需求说明书.md  行为建模背景.md  需求文档.md  需求文档v2.md
pipe-china/api/: Dockerfile  requirements.txt
pipe-china/api/app/: deps.py  main.py  models.py  ontology.json  ontology.py  pg_store.py
pipe-china/api/app/layers/: __init__.py
pipe-china/api/app/prompts/: deepseek_extract.md  deepseek_extract_v1.md
pipe-china/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
pipe-china/frontend/src/: App.vue  main.js  style.css
pipe-china/frontend/src/components/: OntologyPanel.vue  (+6 more)
(+23 files in other folders)
