[project]
name = "flood-demo-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "alembic==1.14.0",
  "httpx==0.28.1",
  "python-multipart==0.0.12",
]

[tool.uvicorn]
factory = false


